Adjusting description in header

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Meal Survey Form</title>
-      <meta name="description" content="Meal Survey Form">
+      <title>Crunchy Ltd.</title>
+      <meta name="description" content="Crunchiest bread ever">
       <meta name="author" content="Kuba">
       <link rel="stylesheet" type="text/css" href="styles.css">
       <!--Start of Tawk.to Script-->
