--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>Crunchy Ltd.</title>
-      <meta name="description" content="Crunchiest bread ever">
+      <meta name="description" content="Crunchy Ltd. website">
       <meta name="author" content="Kuba">
       <link rel="stylesheet" type="text/css" href="styles.css">
       <!--Start of Tawk.to Script-->
