--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <meta name="description" content="Crunchy Ltd. website">
       <meta name="author" content="Kuba">
       <link rel="stylesheet" type="text/css" href="styles.css">
+      <link rel="icon" type="image/png" href="/favicon.png"/>
       <!--Start of Tawk.to Script-->
       <script type="text/javascript">
       var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
