--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>Crunchy Ltd.</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="description" content="Crunchy Ltd. website">
       <meta name="author" content="Kuba">
       <link rel="stylesheet" type="text/css" href="styles.css">
