#email-text added

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
          <div class="footer-container">
             <div id="email-section" class="information">
                <form id="form" action="https://www.freecodecamp.com/email-submit" target="_blank" method="post">
-                  <label>
+                  <label id="email-text">
                      <p>If you want to receive exciting news and anegdotes about bread - subrcribe to our newsletter</p>
                      <input id="email" type="email" name="email" placeholder="Enter your email" pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$" required>
                   </label>
