--- a/index.html
+++ b/index.html
@@ -8,19 +8,6 @@
       <meta name="author" content="Kuba">
       <link rel="stylesheet" type="text/css" href="styles.css">
       <link rel="icon" type="image/png" href="images/favicon.png"/>
-      <!--Start of Tawk.to Script-->
-      <script type="text/javascript">
-         var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-         (function(){
-         var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-         s1.async=true;
-         s1.src='https://embed.tawk.to/5f5eb1c94704467e89ee9f9c/default';
-         s1.charset='UTF-8';
-         s1.setAttribute('crossorigin','*');
-         s0.parentNode.insertBefore(s1,s0);
-         })();
-      </script>
-      <!--End of Tawk.to Script-->
    </head>
    <body>
       <!--HEADER-->
@@ -125,5 +112,6 @@
             </div>
          </div>
       </footer>
+      <script src="//code.tidio.co/2u2recd4mzcbpth0vyvr5lg5jarlk00e.js" async></script>
    </body>
 </html>
