--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!--HEADER-->
       <header id="header">
          <a href="#top">
-         <img id="header-img" src="https://i.ibb.co/P1WSPGn/Crunchy-logo.png" alt="crunchy Ltd. logo">
+         <img id="header-img" src="https://github.com/CrispyBcn/CrunchyLtd/blob/master/images/Crunchy-logo.png?raw=true" alt="crunchy Ltd. logo">
          </a>
          <nav id="nav-bar">
             <ul id="nav-ul">
