--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                </iframe>
             </div>
             <div id="map-div" class="information">
-               <iframe title="Google Map pin of our location" id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2436.8132359446486!2d20.91215649994259!3d48.33073112604827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473f6981c0b6cf37%3A0xb78f6ad52e243ce7!2zS3VwYSwga8O2enPDqWdow6F6YQ!5e0!3m2!1spl!2spl!4v1597403607795!5m2!1spl!2spl" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+               <iframe title="Google Map pin of our location" id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2436.8132359446486!2d20.91215649994259!3d48.33073112604827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473f6981c0b6cf37%3A0xb78f6ad52e243ce7!2zS3VwYSwga8O2enPDqWdow6F6YQ!5e0!3m2!1spl!2spl!4v1597403607795!5m2!1spl!2spl" allowfullscreen="" aria-hidden="false" tabindex="0" rel="preload"></iframe>
             </div>
          </div>
       </footer>
