--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       <meta name="description" content="Crunchy Ltd. website">
       <meta name="author" content="Kuba">
       <link rel="stylesheet" type="text/css" href="styles.css">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
       <link rel="icon" type="image/png" href="images/favicon.png"/>
    </head>
    <body>
