Changed map src

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                </iframe>
             </div>
             <div id="map-div" class="information">
-               <iframe title="Google Map pin of our location" id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2436.8132359446486!2d20.91215649994259!3d48.33073112604827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473f6981c0b6cf37%3A0xb78f6ad52e243ce7!2zS3VwYSwga8O2enPDqWdow6F6YQ!5e0!3m2!1spl!2spl!4v1597403607795!5m2!1spl!2spl" allowfullscreen="" aria-hidden="false" tabindex="0" rel="preload"></iframe>
+               <iframe title="Location of the Bacon City" id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25010.68347487846!2d-86.45082679531089!3d38.41061234749782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886ebabde567ec27%3A0xabf0af753dfdd449!2sBacon%2C%20IN%2047118%2C%20USA!5e0!3m2!1sen!2spl!4v1609155931663!5m2!1sen!2spl" allowfullscreen="" aria-hidden="false" tabindex="0" rel="preload"></iframe>
             </div>
          </div>
       </footer>
