--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
       <link rel="icon" type="image/png" href="images/favicon.png"/>
       <!-- Smartlook -->
-      <script type='text/javascript'>
+<!--       <script type='text/javascript'>
         window.smartlook||(function(d) {
           var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
           var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
           c.charset='utf-8';c.src='https://web-sdk.smartlook.com/recorder.js';h.appendChild(c);
           })(document);
           smartlook('init', '5ba8303ace5fbfdfa4659b62774f89cec04e1f08', { region: 'eu' });
-      </script>
+      </script> -->
       <!-- LiveSession.io code -->
        <script type="text/javascript">
        window['__ls_namespace'] = '__ls';
