--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
          __ls("newPageView");
        </script>
     <!-- END LiveSession.io code -->
+      <script>
+        window.Userback = window.Userback || {};
+        Userback.access_token = 'A-56xFByrZd4dnMYrUZ1BU3qhV0';
+        // identify your logged-in users (optional)
+        Userback.user_data = {
+          id: "123456", // example data
+          info: {
+            name: "someone", // example data
+            email: "someone@example.com" // example data
+          }
+        };
+        (function(d) {
+          var s = d.createElement('script');s.async = true;s.src = 'https://static.userback.io/widget/v1.js';(d.head || d.body).appendChild(s);
+        })(document);
+      </script>
    </head>
    <body>
       <!--HEADER-->
